--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,8 +7,10 @@
 
 @theme {
   /* Font sizes */
-  --text-100: 100px;
-  --text-200: 200px;
+  --text-12: 12px;
+  --text-16: 16px;
+  --text-24: 24px;
+  --text-36: 36px;
 
   /* Spacing (커스텀 필요 시) */
   --spacing-72: 18rem;
@@ -23,8 +25,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ededed;
+    --foreground: #0a0a0a;
   }
 }
 
